@@ -1,5 +1,7 @@
 2008-02-29  Katsutoshi Itoh <cut-sea@kahua.org>
 
+	* Change: modify client side data binding methodology.
+	          new kahua server side binding.
 	* Change: str->alist ,which is internal defined function of
 	          %client-context-alist perform at just first time
 	          aim to performance.
